# design-studio-pro

./: AGENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vitest.config.ts
.github/workflows/: ci.yml  release-cli.yml  release-desktop.yml  version-bump-release.yml
.tickets/: md-04wr.md  md-65gy.md  md-69vl.md  md-77qc.md  md-dbyp.md  md-fn6t.md  md-ghcp.md  md-k9r2.md  md-po51.md  md-xc9e.md
docs/: architecture-current.md  cli.md
plan/active/: phase-2.5-critical-infrastructure.md  phase-3-advanced-features.md  validation-strategy.md
plan/complete/: phase-1-core-architecture.md
plans/active/: cli-implementation.md  dsp-self-update.md  phase-2-core-features.md  phase-4-polish-launch.md  supporting-tasks.md  validation-strategy.md  validation-tasks.md
plans/complete/: cli-implementation.md  dsp-self-update.md  phase-1-canvas-foundation.md  phase-1-environment-setup.md  vertical-slice-image-to-pdf.md
scripts/: sync-version.mjs
specs/: README.md  api-specification.md  data-formats.md  development-roadmap.md  features-specification.md  pdfx-implementation.md  print-requirements.md  technical-architecture.md  testing-strategy.md  ui-designs-proposal.md  ui-ux-specification.md
src/: App.tsx  backgrounds.ts  index.css  projectCoordinates.ts  projectFiles.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli_main.rs  lib.rs  main.rs
src-tauri/src/backup/: mod.rs
src-tauri/src/commands/: assets.rs  canvas.rs  filesystem.rs  mod.rs  pdf.rs  project.rs
src-tauri/src/core/: mod.rs  pdf.rs  project_io.rs  thumbnails.rs
src-tauri/src/error/: integration_tests.rs  mod.rs  recovery.rs  retry.rs  telemetry.rs  transaction.rs
src-tauri/src/models/: asset.rs  element.rs  mod.rs  page.rs  project.rs
src-tauri/src/updater/: install.rs  manifest.rs  mod.rs  state.rs  types.rs
src-tauri/src/utils/: mod.rs
src/__tests__/: App.test.tsx  Canvas.test.tsx  Sidebar.test.tsx  backgrounds.test.ts  historyStore.test.ts  imageBorders.test.ts  importers.test.ts  logMiddleware.test.ts  pageCoordinates.test.ts  pdfExportBorders.test.ts  projectFiles.test.ts  projectStore.test.ts  sheet.test.ts  types.test.ts  uiStore.test.ts
src/canvas/: coordinates.ts  export.ts  grid.ts  guides.ts  handlers.ts  history.ts  imageBorders.ts  importers.ts  index.ts  pageRenderer.ts  sheet.ts  shortcuts.ts  zoomPan.ts
src/components/: AssetLibrary.tsx  Canvas.tsx  CanvasContext.tsx  Rulers.tsx  Sidebar.tsx  StatusBar.tsx  Toolbar.tsx  index.ts
src/stores/: historyStore.ts  index.ts  logMiddleware.ts  projectStore.ts  uiStore.ts
src/types/: asset.ts  element.ts  (+4 more)
