[package]
name = "design-studio-pro"
version = "0.1.1"
description = "Design Studio Pro"
authors = ["you"]
edition = "2021"
default-run = "design-studio-pro"

[lib]
name = "design_studio_pro_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }
image = "0.25"
zip = { version = "2", default-features = false, features = ["deflate"] }
printpdf = "0.7"
clap = { version = "4", features = ["derive"], optional = true }
dirs = { version = "6", optional = true }
flate2 = { version = "1", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
semver = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
tempfile = { version = "3", optional = true }

[features]
cli = ["clap", "dirs", "flate2", "reqwest", "semver", "tar", "tempfile"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[[bin]]
name = "dsp"
path = "src/bin/dsp.rs"
required-features = ["cli"]

[dev-dependencies]
tempfile = "3"
